Date	Added

11/18
        * Added save_flag for skill_status_change_start [celest]
        * Fixed muting not being saved when you quit/change characters/log off [celest]
        * *Hopefully* fixed the skill tree problem where you have to use 49 skill 
          points first before 2nd job skills will show... please report any bugs found
          with it, thank you. [celest]
	* Added flag to pc_unequipitem (thanks to DracoRPG for suggestion) [celest]
	* Skill updates [celest]
	  - Updated Cloaking (thanks to orn), Endure
          - Pneuma (thanks to DracoRPG)
          - Changed sc_ id for Basilica (80%)
	* Modified pc_attack to fix monster npc's not working in certain exes, thanks
	  to leinsirk10 [celest]
	* Moved mapflags organized by type to main mapflag folder and removed "type" folder.
	  Removed mapflags organized by location.[kobra_k88]

11/17
	* Added stub-handler for packet 0x3090 into char_sql [MouseJstr]
	* Fixed a crash in the afm reading/closing code [MouseJstr]
	* Added skill_steal_type to battle_athena.conf for the new (but unconfirmed) 
	  stealing formula [celest]
	* Skill updates: [celest]
	  - Removed annoying skill fail messages from rogue's Snatcher
	  - Add sc_data check for firewall and fogwall
	  - Fixed Berserk (99% hopefully? ^_^)

11/16
	* Fix for compiling against gcc 2.95 [MouseJstr]
	* Added day of week events (OnSat2000) into scripting engine [MouseJstr]
	* Temporarily Disabled GM Command Logs; Weren't working Properly >_<! [Codemaster]
	* Fixed a typo in ../db/Changelog.txt [Nana]
	* Added -funroll-loops argument to makefile to further increase performance [Shinigami]
	* Fixed 2 bugs in DELITEM script command. [Lupus]
	  - added deleting priority: If you have some items with the same ID and want to delete some of them, then
	    at first it'll delete common items then, if necessary, delete the rest items but upgraded/named/with cards. [Lupus]
	* Added checks for Perfect hiding [celest]